--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,5 +2,15 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
